# polls

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: django.yml
base/: routers.py  urls.py  wsgi.py
base/fixtures/: dump.json
base/settings/: base.py  dev.py
polls/: admin.py  models.py  permissions.py  serializers.py  utils.py  views.py
polls/migrations/: 0001_initial.py  0002_alter_poll_date_end.py  0002_auto_20220123_0033.py
tests/: conftest.py  fixtures.py  test_api.py
