[tool.poetry]
name = "polls"
version = "0.1.0"
description = "Polls with DRF and Django"
authors = ["mbrav <mbrav@protonmail.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.7"
Django = "2.2.10"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"

[tool.pytest.ini_options]
minversion = "6.2"
DJANGO_SETTINGS_MODULE = "base.settings.dev"
testpaths = [
    "tests/",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
addopts = "-vv -p no:cacheprovider"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

